# api/openapi3_v1.yaml
@@ -372,10 +372,7 @@ components:
           type: string
           format: uuid
           x-go-name: ID
-          x-go-type: google_uuid.UUID
-          x-go-type-import:
-            name: google_uuid
-            path: github.com/google/uuid
+          x-go-type: uint32
         account_id:
           type: string
           format: uuid
@@ -407,8 +404,9 @@ components:
           items:
             $ref: '#/components/schemas/Transaction'
         next_page_token:
-          type: string
-          example: U3dhZ2dlciByb2Nrcw==
+          type: integer
+          example: 77
+          x-go-type: uint32
     DepositFundsRequest:
       required:
       - amount
@@ -590,8 +588,9 @@ components:
           example: 10
           x-go-type: uint64
         page_token:
-          type: string
-          example: U3dhZ2dlciByb2Nrcw==
+          type: integer
+          example: 25
+          x-go-type: uint32
     TransferFundsRequest:
       required:
       - amount
